fix card spacing on profile page

--- a/src/app/profile/account/account.component.scss
+++ b/src/app/profile/account/account.component.scss
@@ -1,9 +1,21 @@
 @use "variables" as vars;
 
-.spacing {
-  display: block;
-  margin-top: 32px;
-  margin-bottom: 32px;
+:host {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 16px;
+
+  @media (max-width: vars.$medium - 1) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.full-span {
+  grid-column: 1 / -1;
+}
+
+gt-social-auth:not(:has(mat-card)) {
+  display: none;
 }
 
 .remove-content {
@@ -19,8 +31,4 @@
   p {
     padding-right: 16px;
   }
-}
-
-gt-loading-button ::ng-deep button {
-  width: 180px;
 }
