--- a/src/app/profile/change-password/change-password.component.scss
+++ b/src/app/profile/change-password/change-password.component.scss
@@ -1,18 +1,36 @@
 @use "variables" as vars;
 
+:host {
+  display: flex;
+}
+
+mat-card {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+mat-card-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 mat-card-header {
   &::ng-deep .mat-card-header-text {
     margin-left: 0;
   }
 }
 
-.half-width {
-  max-width: 390px;
-}
 
 form {
-  margin-left: auto;
-  margin-right: auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  gt-loading-button {
+    margin-top: auto;
+  }
 
   .server-error {
     padding-top: 16px;
